AX: Expose ARIA Busy Notifications https://bugs.webkit.org/show_bug.cgi?id=121451

Patch by Samuel White <samuel_white@apple.com> on 2013-09-17
Reviewed by Darin Adler.

Source/WebCore:

Added AXElementBusyChanged notification that posts when aria-busy is toggled. This
enables screen readers to detect busy states without polling the focused element.

Test: platform/mac/accessibility/element-busy-changed.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChanged):
* accessibility/AXObjectCache.h:
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):

LayoutTests:

Added test to verify that elements post AXElementBusyChanged notifications when aria-busy is toggled.

* platform/mac/accessibility/element-busy-changed-expected.txt: Added.
* platform/mac/accessibility/element-busy-changed.html: Added.

Canonical link: https://commits.webkit.org/139502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155976 268f45cc-cd09-0410-ab3c-d52691b4dbfc